--- a/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
+++ b/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
@@ -5,12 +5,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+	<PackageId>DfE.FamilyHubs.SharedKernel.Razor</PackageId>
+	<VersionPrefix>1.0.1</VersionPrefix>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
-
 
 </Project>
