--- a/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
+++ b/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
@@ -1,4 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
+	
+<!--todo: once consumers have been updated to use the shared RCL, just add appropriate bits to sharedkernel and don't have a sharedkernel.razor -->
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,10 +10,15 @@
 	<PackageId>DfE.FamilyHubs.SharedKernel.Razor</PackageId>
 	<VersionPrefix>1.0.2-alpha</VersionPrefix>
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+<ItemGroup>
+	<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+</ItemGroup>
 
 </Project>
