--- a/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
+++ b/src/FamilyHubs.SharedKernel.Razor/FamilyHubs.SharedKernel.Razor.csproj
@@ -29,4 +29,10 @@
 		<None Include="readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="wwwroot\images\crest.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
