--- a/src/familyhubs-frontend/package.json
+++ b/src/familyhubs-frontend/package.json
@@ -31,7 +31,7 @@
     "@types/gtag.js": "^0.0.12",
     "@types/jquery": "^3.5.16",
     "del": "^5.1.0",
-    "govuk-frontend": "~4.5",
+    "govuk-frontend": "4.5.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
     "gulp-concat": "^2.6.1",
