--- a/tests/fh-shared-kernel.unit-tests/FamilyHubs.SharedKernel.UnitTests.csproj
+++ b/tests/fh-shared-kernel.unit-tests/FamilyHubs.SharedKernel.UnitTests.csproj
@@ -34,4 +34,10 @@
     <ProjectReference Include="..\..\src\fh-shared-kernel.shared-kernel\FamilyHubs.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
