--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GovUkOidcConfiguration": {
+    "Oidc": {
+      "BaseUrl": "<baseUrl>",
+      "PrivateKey": "<PrivateKey>",
+      "ClientId": "<ClientId>",
+      "KeyVaultIdentifier": null
+    },
+    "Urls": {
+      "SignedOutRedirect": "<host>/Account/signed-out"
+    }
+  },
   "AllowedHosts": "*"
 }
