--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -14,7 +14,8 @@
     },
     "Urls": {
       "SignedOutRedirect": "<host>/Account/signed-out"
-    }
+    },
+    "CookieName": "GovSignInExample"
   },
   "AllowedHosts": "*"
 }
