--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -15,7 +15,11 @@
     "Urls": {
       "SignedOutRedirect": "<host>/Account/signed-out"
     },
-    "CookieName": "GovSignInExample"
+    "CookieName": "GovSignInExample",
+    "StubAuthentication": {
+      "UseStubAuthentication": true,
+      "UseStubClaims": true
+    }
   },
   "AllowedHosts": "*"
 }
