--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -14,6 +14,11 @@
     },
     "Urls": {
       "SignedOutRedirect": "<host>/Account/signed-out"
+    },
+    "CookieName": "GovSignInExample",
+    "StubAuthentication": {
+      "UseStubAuthentication": true,
+      "UseStubClaims": true
     }
   },
   "AllowedHosts": "*"
