--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "GovUkOidcConfiguration": {
+    "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": "<baseUrl>",
       "PrivateKey": "<PrivateKey>",
@@ -13,7 +14,7 @@
       "KeyVaultIdentifier": null
     },
     "Urls": {
-      "SignedOutRedirect": "<host>/Account/signed-out"
+      "SignedOutRedirect": "https://localhost:7216/Account/signed-out"
     },
     "CookieName": "GovSignInExample",
     "StubAuthentication": {
