--- a/examples/GovSignInExample/SecureApiExample/appsettings.json
+++ b/examples/GovSignInExample/SecureApiExample/appsettings.json
@@ -8,7 +8,7 @@
   "GovUkOidcConfiguration": {
     "Oidc": {
       "BaseUrl": "<BaseUrl>",
-      "PrivateKey": "<PrivateKey>",
+      "PrivateKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
       "ClientId": "<ClientId>",
       "KeyVaultIdentifier": null
     }
