--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -7,6 +7,7 @@
   },
   "GovUkOidcConfiguration": {
     "AppHost": "https://localhost:7216",
+    "BearerTokenSigningKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
     "Oidc": {
       "BaseUrl": "<baseUrl>",
       "PrivateKey": "<PrivateKey>",
