--- a/examples/GovSignInExample/SecureApiExample/appsettings.json
+++ b/examples/GovSignInExample/SecureApiExample/appsettings.json
@@ -6,12 +6,7 @@
     }
   },
   "GovUkOidcConfiguration": {
-    "Oidc": {
-      "BaseUrl": "<BaseUrl>",
-      "PrivateKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
-      "ClientId": "<ClientId>",
-      "KeyVaultIdentifier": null
-    }
+    "BearerTokenSigningKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
   },
   "AllowedHosts": "*"
 }
