Signing key provider (#21)
* BearerTokenSigningkey

---------

Co-authored-by: Mike-V-Digital <122551010+Mike-V-Digital@users.noreply.github.com>

--- a/examples/GovSignInExample/SecureApiExample/appsettings.json
+++ b/examples/GovSignInExample/SecureApiExample/appsettings.json
@@ -6,12 +6,7 @@
     }
   },
   "GovUkOidcConfiguration": {
-    "Oidc": {
-      "BaseUrl": "<BaseUrl>",
-      "PrivateKey": "<PrivateKey>",
-      "ClientId": "<ClientId>",
-      "KeyVaultIdentifier": null
-    }
+    "BearerTokenSigningKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
   },
   "AllowedHosts": "*"
 }
