No Claims Redirect and user extension methods

--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -15,12 +15,14 @@
       "KeyVaultIdentifier": null
     },
     "Urls": {
-      "SignedOutRedirect": "https://localhost:7216/Account/signed-out"
+      "SignedOutRedirect": "https://localhost:7216/Account/signed-out",
+      "NoClaimsRedirect": "https://localhost:7216/NoClaimsPage"
     },
     "CookieName": "GovSignInExample",
+    "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
-      "UseStubAuthentication": true,
-      "UseStubClaims": true
+      "UseStubAuthentication": false,
+      "UseStubClaims": false
     }
   },
   "AllowedHosts": "*"
