--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -21,8 +21,8 @@
     "CookieName": "GovSignInExample",
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
-      "UseStubAuthentication": false,
-      "UseStubClaims": false
+      "UseStubAuthentication": true,
+      "UseStubClaims": true
     }
   },
   "AllowedHosts": "*"
