--- a/examples/GovSignInExample/GovSignInExample/GovSignInExample.csproj
+++ b/examples/GovSignInExample/GovSignInExample/GovSignInExample.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4283832e-54e8-430b-9376-815c12798e45</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
