--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -16,13 +16,14 @@
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/Account/signed-out",
-      "NoClaimsRedirect": "https://localhost:7216/NoClaimsPage"
+      "NoClaimsRedirect": "https://localhost:7216/NoClaimsPage",
+      "TermsAndConditionsRedirect": "https://localhost:7216/TermsAndConditionsPage"
     },
     "CookieName": "GovSignInExample",
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
-      "UseStubAuthentication": true,
-      "UseStubClaims": true
+      "UseStubAuthentication": false,
+      "UseStubClaims": false
     }
   },
   "AllowedHosts": "*"
