sign-out when 401 wip

--- a/examples/GovSignInExample/GovSignInExample/appsettings.json
+++ b/examples/GovSignInExample/GovSignInExample/appsettings.json
@@ -16,7 +16,7 @@
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/Account/signed-out",
-      "NoClaimsRedirect": "https://localhost:7216/NoClaimsPage",
+      "NoClaimsRedirect": "/NoClaimsPage",
       "TermsAndConditionsRedirect": "https://localhost:7216/TermsAndConditionsPage"
     },
     "CookieName": "GovSignInExample",
