add enum extensions class plus some generated unit tests

--- a/tests/fh-shared-kernel.unit-tests/FamilyHubs.SharedKernel.UnitTests.csproj
+++ b/tests/fh-shared-kernel.unit-tests/FamilyHubs.SharedKernel.UnitTests.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\..\src\fh-shared-kernel.shared-kernel\FamilyHubs.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
